<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>UnitreeCameraSDK</name>
  <version>0.0.0</version>
  <description>Unitree Camera SDK</description>
  <maintainer email="ngmorales97@gmail.com">Nick Morales</maintainer>
  <license>Apache License 2.0</license>

  <depend>OpenCV</depend>
  <depend>roscpp</depend>
  <depend>sensor_msgs</depend>
  <depend>cv_bridge</depend>
  <buildtool_depend>catkin</buildtool_depend>

  <export>
  
  </export>
</package>
